# oubt

./: .gitignore  main.py  pyproject.toml  test_versioning.txt
.github/workflows/: cicd.yml  terraform-cicd.yml
day-1/: day-1.md
day-2/: boto3-hands-on.py  bucket-metadata-manifest.yaml
day-3/: cgm-data-analysis.sql  cleaned_taxi_zones.csv  golden-record-strategy.ipynb
day-4/: golden-record-strategy.ipynb  golden-record-strategy.md
day-5/terraform/: README.md  outputs.tf  terraform.tfvars  variables.tf
day-6/: convert-tripdata-to-delta.py  datalake-zone-implement.py  delta-time-travel.py
day-7/: glue-catalog-crawler-setup.py  master-data-enrichment.py  pyspark-aggregations.py  pyspark-trip-transformations.py  pyspark-zone-transformations.py  spark_session.py
day-8/: glue-etl.py
day-9-10/: fuzzy-matching.py  recordlinkage-demo.py  vendor-deduplication.py
